@@ -2,31 +2,38 @@
   <accordion-item @opened="loadResponse">
     <template v-slot:button-text>Sent response</template>
     <template v-slot:accordion-body>
-      <div class="col-md-12 mb-3" v-if="statusCode">
-        <label>HTTP status code</label>
-        <span>{{ statusCode }}</span>
+      <div v-if="hasResponse">
+        <div class="col-md-12 mb-3" v-if="statusCode">
+          <label>HTTP status code</label>
+          <span>{{ statusCode }}</span>
+        </div>
+        <div class="col-md-12 mb-3" v-if="hasHeaders">
+          <label>Response headers</label>
+          <table class="table">
+            <tbody>
+              <tr v-for="(value, key) in headers" :key="key">
+                <td class="p-1">{{ key }}</td>
+                <td class="p-1">{{ value }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-12 mb-3" v-if="body">
+          <label>Response body</label>
+          <button
+            class="btn btn-success btn-sm me-2"
+            @click="downloadResponse"
+            title="Download the response"
+          >
+            Download
+          </button>
+          <code-highlight v-if="!bodyIsBinary" :code="body" />
+        </div>
       </div>
-      <div class="col-md-12 mb-3" v-if="hasHeaders">
-        <label>Response headers</label>
-        <table class="table">
-          <tbody>
-            <tr v-for="(value, key) in headers" :key="key">
-              <td class="p-1">{{ key }}</td>
-              <td class="p-1">{{ value }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-md-12 mb-3" v-if="body">
-        <label>Response body</label>
-        <button
-          class="btn btn-success btn-sm me-2"
-          @click="downloadResponse"
-          title="Download the response"
-        >
-          Download
-        </button>
-        <code-highlight v-if="!bodyIsBinary" :code="body" />
+      <div v-else>
+        No response found for this request. Go to
+        <router-link :to="{ name: 'Settings' }">Settings</router-link> to enable
+        "Store response for request".
       </div>
     </template>
   </accordion-item>
@@ -69,10 +76,11 @@ export default defineComponent({
     const statusCode = computed(() =>
       response.value ? response.value?.statusCode : null
     );
+    const hasResponse = computed(() => props.request.hasResponse);
 
     // Methods
     const loadResponse = async () => {
-      if (!response.value) {
+      if (hasResponse.value && !response.value) {
         response.value = await requestStore.getResponse(
           props.request.correlationId
         );
@@ -96,6 +104,7 @@ export default defineComponent({
       body,
       statusCode,
       downloadResponse,
+      hasResponse,
     };
   },
 });
