@@ -1,0 +1,4 @@
+export interface UpdateConfigurationValueInputModel {
+  configurationKey: string;
+  newValue: string;
+}
