@@ -30,6 +30,19 @@
           >
         </div>
       </div>
+      <div class="col-md-12">
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            id="storeResponses"
+            v-model="storeResponses"
+          />
+          <label class="form-check-label" for="storeResponses"
+            >Store response for request</label
+          >
+        </div>
+      </div>
     </div>
 
     <div class="row mt-3">
@@ -60,7 +73,7 @@
 </template>
 
 <script lang="ts">
-import { defineComponent, onMounted, ref } from "vue";
+import { computed, defineComponent, onMounted, ref } from "vue";
 import { useSettingsStore } from "@/store/settings";
 import type { SettingsModel } from "@/domain/settings-model";
 import { useConfigurationStore } from "@/store/configuration";
@@ -79,12 +92,33 @@ export default defineComponent({
     // Methods
     const saveSettings = () => generalStore.storeSettings(settings.value);
 
+    // Computed
+    const storeResponsesKey = "storeResponses";
+    const storeResponses = computed({
+      get: () => {
+        const configValue = config.value.find(
+          (c) => c.key === storeResponsesKey
+        );
+        if (!configValue) {
+          return false;
+        }
+
+        return configValue.value.toLowerCase() === "true";
+      },
+      set: async (value) => {
+        await configurationStore.updateConfigurationValue({
+          configurationKey: storeResponsesKey,
+          newValue: value ? "true" : "false",
+        });
+      },
+    });
+
     // Lifecycle
     onMounted(async () => {
       config.value = await configurationStore.getConfiguration();
     });
 
-    return { settings, saveSettings, config };
+    return { settings, saveSettings, config, storeResponses };
   },
 });
 </script>
